required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

- Adding -DUSE_GENERIC_MS_NINT to the WIN64 builds (#2250)

- Adding msSaveImageBuffer and use that function from the mapscript
  library instead of the renderer specific functions. (#2241)

- Split each format into it's own <formats> element in WCS describe
  coverage results (#2244).

- Support to run the mapscript c# examples on x64 platform (#2240)

- Fixed problem introduced in 5.0.0-beta4: all HTML legend icons were
  empty white images (#2243)

- Fixed WMS Client to always send STYLES parameter with WMS GetMap
  requests (#2242)

- Fixed support for label encoding in SVG output (#2239)

- Added support for label encoding in legend (#2239)

- Fixed PHP MapScript layer->queryByAttributes() to not accept empty or
  null qitem arg (#480)

- AGG: fixed incorrect rendering of pixmaps on MSB architectures (#2235)

- Added layer.getFeature() in PHP MapScript with optional tileindex arg, 
  and deprecated layer.getShape() to match what we had in SWIG (#900)

- Added class.getTextString() and deprecated/renamed class.getExpression()
  and layer.getFilter() to class.getExpressionString() and 
  layer.getFilterString() to match what we have in SWIG MapScript (#1892)


Version 5.0.0-beta4 (2007-08-15)
--------------------------------

- Updated msImageCreateAGG to only allow RGB or RGBA pixel models (#2231)

- Fixed problem with symbol.setImagePath() when file doesn't exist (#1962)

- Python MapScript failures (#2230)

- msInsertLayer should not free the incoming layer anymore (#2229)

- Include only parsed in the first mapfile (#2021)

- Incorrect lookup of symbol in symbolset (#2227)
